SERVER-8521: remove Database::_openAllFiles